quorum/test/tests/TypeChecker/Pass/ImpAssignNumberNumObjWrapped.quorum
class Main
    action Main
        Number num
        num:SetValue(7.5)
        number n = num
    end
end