quorum/test/tests/TypeChecker/Fail/ImpAssignIntegerNumObjWrapped.quorum
class main
    action main
        Number n
        n:setValue(7.5)
        integer i = n
    end
end